--- a/src/app/cover/cover.component.css
+++ b/src/app/cover/cover.component.css
@@ -1,8 +1,13 @@
+
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  background: black;
+}
+
 img {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 100%;
+  object-fit: contain;
 }
